--- a/demoapp.yaml
+++ b/demoapp.yaml
@@ -85,18 +85,16 @@ spec:
           runAsUser: 65535
           runAsGroup: 65535
         env:
+        - name: MYSQL_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        - name: MYSQL_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: DATA_DIR
           value: "/data" # external pvc
-        - name: MYSQL_HOST
-          value: xx.xx.xx.xx # demo db host
-        - name: MYSQL_PORT
-          value: "3306" 
-        - name: MYSQL_DB
-          value: app
-        - name: MYSQL_USER
-          value: app
-        - name: MYSQL_PASSWORD
-          value: A123456+ # demo db password
         volumeMounts:
         - mountPath: /data
           name: demoapp-volume
