--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,17 +19,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout Repo
+      uses: actions/checkout@v2
+
+    - name: Setup ko
+      uses: imjasonh/setup-ko@v0.4
 
     - name: Install Cosign
       uses: sigstore/cosign-installer@main
 
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
-
-    - name: Log in to registry
-      # This is where you will update the PAT to GITHUB_TOKEN
+    - name: Log in to ghcr registry
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | ko login ghcr.io -u ${{ github.actor }} --password-stdin
+
+    - name: Build the image with ko
+      run: |
+        KO_DOCKER_REPO=ghcr.io/eumel8/oro-demoapp
+        ko build --sbom none -t ko --bare
+
+    - name: Build the image with docker
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
 
     - name: Push & Sign image
       run: |
@@ -48,6 +57,7 @@ jobs:
         docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
         docker push $IMAGE_ID:$VERSION
         cosign sign --key env://COSIGN_KEY $IMAGE_ID:$VERSION
+        cosign sign --key env://COSIGN_KEY ghcr.io/eumel8/oro-demoapp/main:ko
       env:
         COSIGN_KEY: ${{secrets.COSIGN_KEY}}
         COSIGN_PASSWORD: ${{secrets.COSIGN_PASSWORD}}
