--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,9 @@ jobs:
 
     - name: Build the image with ko
       run: |
-        ko build --sbom none -t ko
-      env:
-        KO_DOCKER_REPO: ghcr.io/eumel8/oro-demoapp
+        ko build -t ko
+      # env:
+      #  KO_DOCKER_REPO: ghcr.io/eumel8/oro-demoapp
 
     - name: Build the image with docker
       run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
