--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Build the image with ko
       run: |
-        ko build -t ko
+        ko build
       # env:
       #  KO_DOCKER_REPO: ghcr.io/eumel8/oro-demoapp
 
