--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
 
     - name: Build the image with ko
       run: |
-        ko build
+        ko build -t ko
       # env:
       #  KO_DOCKER_REPO: ghcr.io/eumel8/oro-demoapp
 
