--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
     types: [created]
     
 env:
-  IMAGE_NAME: demoapp
+  IMAGE_NAME: oro-demoapp
   
 jobs:
   build:
@@ -62,7 +62,7 @@ jobs:
         docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
         docker push $IMAGE_ID:$VERSION
         cosign sign --key env://COSIGN_KEY $IMAGE_ID:$VERSION
-        cosign sign --key env://COSIGN_KEY ghcr.io/eumel8/oro-demoapp/main:ko
+        cosign sign --key env://COSIGN_KEY ghcr.io/eumel8/oro-demoapp/demoapp:ko
       env:
         COSIGN_KEY: ${{secrets.COSIGN_KEY}}
         COSIGN_PASSWORD: ${{secrets.COSIGN_PASSWORD}}
