--- a/demoapp-ingress.yaml
+++ b/demoapp-ingress.yaml
@@ -1,19 +1,20 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  annotations:
   name: demoapp-nginx
 spec:
   rules:
-  - host: demoapp.example.com
+  - host: oro-demoapp.example.com
     http:
       paths:
       - backend:
           service:
-            name: demoapp-mysql
+            name: demoapp-service
             port:
               number: 80
         path: /
         pathType: ImplementationSpecific
   tls:
   - hosts:
-    - demoapp.example.com
+    - oro-demoapp.example.com
